0.13/_sources/api/generated/deepchecks.nlp.checks.model_evaluation.PredictionDrift.rst.txt

PredictionDrift
===============



.. currentmodule:: deepchecks.nlp.checks.model_evaluation

.. autoclass:: PredictionDrift
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   PredictionDrift.add_condition
   
   
   PredictionDrift.add_condition_drift_score_less_than
   
   
   PredictionDrift.clean_conditions
   
   
   PredictionDrift.conditions_decision
   
   
   PredictionDrift.config
   
   
   PredictionDrift.from_config
   
   
   PredictionDrift.from_json
   
   
   PredictionDrift.metadata
   
   
   PredictionDrift.name
   
   
   PredictionDrift.params
   
   
   PredictionDrift.prediction_drift
   
   
   PredictionDrift.remove_condition
   
   
   PredictionDrift.run
   
   
   PredictionDrift.run_logic
   
   
   PredictionDrift.to_json
   


















