0.14/_sources/api/generated/deepchecks.nlp.checks.model_evaluation.PredictionDrift.rst.txt

PredictionDrift
===============



.. currentmodule:: deepchecks.nlp.checks.model_evaluation

.. autoclass:: PredictionDrift
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   PredictionDrift.aggregation_method
   

   
   PredictionDrift.balance_classes
   

   
   PredictionDrift.categorical_drift_method
   

   
   PredictionDrift.drift_mode
   

   
   PredictionDrift.ignore_na
   

   
   PredictionDrift.margin_quantile_filter
   

   
   PredictionDrift.max_classes_to_display
   

   
   PredictionDrift.max_num_categories_for_display
   

   
   PredictionDrift.max_num_categories_for_drift
   

   
   PredictionDrift.min_category_size_ratio
   

   
   PredictionDrift.min_samples
   

   
   PredictionDrift.n_samples
   

   
   PredictionDrift.numerical_drift_method
   

   
   PredictionDrift.random_state
   

   
   PredictionDrift.show_categories_by
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   PredictionDrift.add_condition
   
   
   PredictionDrift.add_condition_drift_score_less_than
   
   
   PredictionDrift.clean_conditions
   
   
   PredictionDrift.conditions_decision
   
   
   PredictionDrift.config
   
   
   PredictionDrift.from_config
   
   
   PredictionDrift.from_json
   
   
   PredictionDrift.metadata
   
   
   PredictionDrift.name
   
   
   PredictionDrift.params
   
   
   PredictionDrift.remove_condition
   
   
   PredictionDrift.run
   
   
   PredictionDrift.run_logic
   
   
   PredictionDrift.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /nlp/auto_checks/model_evaluation/images/thumb/sphx_glr_plot_prediction_drift_thumb.png
     :alt: PredictionDrift

     :ref:`sphx_glr_nlp_auto_checks_model_evaluation_plot_prediction_drift.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


